@@ -13,6 +13,8 @@ $Id$
 	Remove unused variables.  Add help text.
 	Use 0 as number of first aacraid controller as on Linux.
 
+	smartctl.8.in, smartd.conf.5.in: Update '-d aacraid' documentation.
+
 2015-05-30  Nidhi Malhotra  <nidhi.malhotra@pmcs.com>
 
 	aacraid.h, os_win32.cpp:
